# syntropic-sid-engine

./: .gitignore  app.py  pyproject.toml  requirements.txt  task.md
application/: mock_data.py
application/dto/: dashboard_dto.py  row_dto.py  simulation_dto.py
application/use_cases/: dashboard_use_case.py
domain/entities/: cycle.py  enums.py  metabolic_loop.py  performative_goal.py  plant.py  roadmap.py  row.py  species.py  system_map.py
domain/repositories/: interfaces.py
domain/services/: metabolic_service.py
domain/value_objects/: biomass.py  indicators.py
infrastructure/repositories/: in_memory.py
interfaces/streamlit/components/: styles.py
interfaces/streamlit/tabs/: dashboard.py  layout_2d.py  metabolism.py  strata_3d.py
skills/: sid-framework.md  syntropy-rules.md
tests/domain/: test_biomass.py  test_cycle.py  test_enums.py  test_indicators.py  test_metabolic_loop.py  test_metabolic_service.py  test_performative_goal.py  test_plant.py  test_roadmap.py  test_row.py  test_species.py  test_system_map.py
