[project]
name = "symbiotropy"
version = "0.1.0"
description = "4D Regenerative Ecosystem Simulator — merging Syntropic Agroforestry with the SiD Framework"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.2",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
