[project]
name = "symbiotropy"
version = "0.1.0"
description = "4D Regenerative Ecosystem Simulator — merging Syntropic Agroforestry with the SiD Framework"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.2",
    "plotly>=6.8.0",
    "pydantic>=2.5",
    "shapely>=2.1.2",
    "streamlit>=1.59.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
